[gd_scene load_steps=21 format=3 uid="uid://ds3l1a3ancjmf"]

[ext_resource type="Script" path="res://battler/enemy_battler.gd" id="1_iw3s8"]
[ext_resource type="Texture2D" uid="uid://cgoksibmw0g2d" path="res://imgs/2D Pixel Dungeon Asset Pack/Character_animation/monsters_idle/skull/v2/skull_v2_1.png" id="2_00fya"]
[ext_resource type="Texture2D" uid="uid://bbs3i5fksd7ud" path="res://imgs/2D Pixel Dungeon Asset Pack/interface/arrow_1.png" id="3_ysx4u"]
[ext_resource type="Texture2D" uid="uid://dxtkaakxs0ekc" path="res://imgs/2D Pixel Dungeon Asset Pack/interface/arrow_2.png" id="4_mn242"]
[ext_resource type="Texture2D" uid="uid://bpdj7lsi4xdi5" path="res://imgs/2D Pixel Dungeon Asset Pack/interface/arrow_3.png" id="5_ria7t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vja4w"]
bg_color = Color(0, 0, 0, 0.694)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wfb14"]
bg_color = Color(100, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oqfwm"]
bg_color = Color(100, 0, 0, 0.2)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(100, 0, 0, 1)

[sub_resource type="Animation" id="Animation_r8fox"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2ucwv"]
resource_name = "in_turn"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gdcbr"]
_data = {
"RESET": SubResource("Animation_r8fox"),
"in_turn": SubResource("Animation_2ucwv")
}

[sub_resource type="Animation" id="Animation_ctfiq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0fjwc"]
resource_name = "play"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(2, 2, 2, 1), Color(1, 1, 1, 1), Color(2, 2, 2, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_svwoc"]
_data = {
"RESET": SubResource("Animation_ctfiq"),
"play": SubResource("Animation_0fjwc")
}

[sub_resource type="Animation" id="Animation_nmddt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_mobvh"]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-2, 2.08165e-12), Vector2(-4, 2.08165e-12), Vector2(6, 2.08165e-12), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hyf76"]
_data = {
"RESET": SubResource("Animation_nmddt"),
"attack": SubResource("Animation_mobvh")
}

[sub_resource type="Animation" id="Animation_bp4j3"]
resource_name = "heal"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 3, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_keyvc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tkjwi"]
_data = {
"RESET": SubResource("Animation_keyvc"),
"heal": SubResource("Animation_bp4j3")
}

[node name="EnemyBattler" type="Node2D" groups=["EnemyBattler"]]
scale = Vector2(-1, 1)
script = ExtResource("1_iw3s8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
texture = ExtResource("2_00fya")

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -8.0
offset_top = 8.0
offset_right = 8.0
offset_bottom = 12.0
theme_override_styles/background = SubResource("StyleBoxFlat_vja4w")
theme_override_styles/fill = SubResource("StyleBoxFlat_wfb14")
fill_mode = 1
show_percentage = false

[node name="SelectedTargetButton" type="TextureButton" parent="."]
unique_name_in_owner = true
offset_left = -21.0
offset_top = 6.0
offset_right = -5.0
offset_bottom = 22.0
rotation = -1.5708
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("3_ysx4u")
texture_pressed = ExtResource("4_mn242")
texture_hover = ExtResource("5_ria7t")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
show_behind_parent = true
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 7.0
theme_override_styles/panel = SubResource("StyleBoxFlat_oqfwm")

[node name="TurnIndicatorAnimation" type="AnimationPlayer" parent="Panel"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_gdcbr")
}

[node name="HitFXAnimation" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_svwoc")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_hyf76")
}

[node name="HealFXAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tkjwi")
}
